--- a/UTS_MI_2021A_21091397037_Rafie Mirza Ramadhan/index.html
+++ b/UTS_MI_2021A_21091397037_Rafie Mirza Ramadhan/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- command link dibawah digunakan sebagai penghubungan dengan file style.css agar website tampak lebih menarik -->
     <link rel="stylesheet" href="css/style.css">
     <title>Rafie Mirza Ramadhan - 21091397037 - D4 MI 2021 A</title>
 </head>
@@ -24,9 +25,11 @@
         <br>
         <br>
         <p>Hasil Volume balok adalah</p>
+        <!-- command h2 dibawah digunakan sebagai tempat penulisan hasil seluruh input yang sudah diisikan -->
         <h2 class="hasil"></h2>
 
     </div>
+    <!-- command script dibawah digunakan sebagai pengeksekusian segala input dan rumus yang sudah dituliskan di file .js -->
     <script src="js/script.js"></script>
 </body>
 </html>
